# OpenGl-Rust

./: .gitignore  Cargo.toml  imgui.ini
res/shader/: textured.toml
res/shader/flat/: flat.frag  flat.vert
res/shader/textured/: textured.frag  textured.vert
src/: alignment.rs  buffer.rs  camera.rs  dispatcher.rs  glfw_bind.rs  main.rs  model.rs  rendering.rs  scene.rs  shader.rs  textures.rs
